Add nuevo background, icons y codigo en CSS

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
                     Bienvenidos<br>a mi portafolio
                 </h1>
                 <p class="my-5">
-                    Hola, soy Miguel E Quintana, un desarrollador web apasionado por crear soluciones innovadoras y efectivas. En este portafolio, te presento mis proyectos más destacados y mis habilidades en HTML, CSS, Bootstrap .
+                    Hola, soy Miguel E Quintana, un desarrollador web apasionado por crear soluciones innovadoras y
+                    efectivas. En este portafolio, te presento mis proyectos más destacados y mis habilidades en HTML,
+                    CSS, Bootstrap .
 
                 </p>
                 <div class="mb-5 pb-5">
@@ -78,25 +80,28 @@
 
         <div class="row">
             <div class="col-12 col-md-4">
-                <i class="fas fa- fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Una Persona Apacionada</h3>
+                <i class="fa fa-address-card"></i>
+                <h3 class="my-3 fw-bold">Una Persona Apasionada</h3>
                 <p class="my-3">
-                    Soy una persona apasionada por el aprendizaje, siempre estoy buscando nuevas formas de mejorar mis habilidades y conocimientos.
+                    Soy una persona apasionada por el aprendizaje, siempre estoy buscando nuevas formas de mejorar mis
+                    habilidades y conocimientos.
 
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fas fa-b fa-3x my-3"></i>
+                <i class="fa fa-handshake"></i>
                 <h3 class="my-3 fw-bold">Colaborador</h3>
                 <p class="my-3">
-                    Además, soy colaborador, me gusta trabajar en equipo y ayudar a mis compañeros a alcanzar sus objetivos
+                    Además, soy colaborador, me gusta trabajar en equipo y ayudar a mis compañeros a alcanzar sus
+                    objetivos
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fa fa-facebook fa-3x my-3"></i>
+                <i class="fa fa-info"></i>
                 <h3 class="my-3 fw-bold">Detallista</h3>
                 <p class="my-3">
-                    También soy detallista, me aseguro de que todos los detalles estén en su lugar y que mi trabajo sea de alta calidad.
+                    También soy detallista, me aseguro de que todos los detalles estén en su lugar y que mi trabajo sea
+                    de alta calidad.
 
                 </p>
             </div>
@@ -115,7 +120,9 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Implementacion HTML</h5>
                         <p class="card-text">
-                            HTML (Hypertext Markup Language) es un lenguaje de marcado utilizado para crear páginas web. Es el estándar para la creación de contenido en la web y es utilizado por la mayoría de los sitios web.
+                            HTML (Hypertext Markup Language) es un lenguaje de marcado utilizado para crear páginas web.
+                            Es el estándar para la creación de contenido en la web y es utilizado por la mayoría de los
+                            sitios web.
 
                         </p>
                         <button type="button" class="btn btn-outline-primary">
@@ -130,7 +137,9 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Diseño con Flex</h5>
                         <p class="card-text">
-                            Flexbox (Flexible Box) es un modelo de diseño de CSS que permite crear layouts flexibles y responsivos. Fue introducido en el año 2009 y ha sido ampliamente adoptado en la industria del diseño web.
+                            Flexbox (Flexible Box) es un modelo de diseño de CSS que permite crear layouts flexibles y
+                            responsivos. Fue introducido en el año 2009 y ha sido ampliamente adoptado en la industria
+                            del diseño web.
 
                         </p>
                         <button type="button" class="btn btn-outline-primary">
@@ -145,7 +154,9 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Aplicando Bootstrap</h5>
                         <p class="card-text">
-                            Bootstrap es un framework de front-end gratuito y de código abierto que permite crear sitios web responsivos y móviles de manera rápida y sencilla. Fue creado por Twitter en 2011 y ha sido ampliamente adoptado en la industria del desarrollo web.
+                            Bootstrap es un framework de front-end gratuito y de código abierto que permite crear sitios
+                            web responsivos y móviles de manera rápida y sencilla. Fue creado por Twitter en 2011 y ha
+                            sido ampliamente adoptado en la industria del desarrollo web.
 
                         </p>
                         <button type="button" class="btn btn-outline-primary">
